--- a/Budget/Pages/Index.razor
+++ b/Budget/Pages/Index.razor
@@ -1,7 +1,15 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class=" row">
+    <div class="col text-center">
+        <h1>Бюджетирование</h1>
+    </div>
+</div>
 
-Welcome to your new app.
+<div class=" row">
+    <div class="col text-center">
+        <h2>Второй уровень</h2>
+    </div>
+</div>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<UnitListTable/>
